--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
    <div class="top-row">
    
   <div class="photo-block">
-        <img src="img2/PSX_20251114_071933.jpg"></div>
+        <img src="PSX_20251114_071933.jpg"></div>
 </div>
         <div class="phrase">
    <p>Всё, что мы высаживаем в нашем подсознании, <br>и питаем повторением и эмоциями, когда-нибудь станет реальностью.</p>
@@ -87,3 +87,4 @@
  </body>
         </html>
    
+
