--- a/index.html
+++ b/index.html
@@ -23,48 +23,75 @@
 <div class="left-block">
 <h1 class="overlay-title">Психолог</h1> 
 <h3 class="name">Елена Викторовна</h3>
-<div class="about-block">
-<h2>Обо мне</h2>
-<br>
-<p>Меня зовут Елена. Я психолог в течении 5 лет. <br>Самое главное в моей профессии,<br>
-       это помочь людям поверить в себя <br> и ценить эту прекрасную жизнь, <br>
-       несмотря на временные трудности.</p>
-       <br>
-<div class="socials">
-<h4>Мои социальные сети:</h4>
-<a href="portfolio.html" target="_blank">WhatsApp</a>  
- <br>
-<a href="https://instagram.com/aliya_official92" target="blank">Instagram</a>
+
+<div class="help-block">
+<h3>Чем я могу помочь</h3>
 </div>
+
+<div class="list-wrapper">
+   
+    <ul>  <li>
+<span class="checkbox">✔</span> 
+<span class="list-item-text">Преодолеть трудности</span>
+</li>
+   <li>
+    <span class="checkbox">✔</span>  
+      <span class="list-item-text">Справиться с депрессией</span>
+   </li>
+   <li>
+<span class="checkbox">✔</span>  
+      <span class="list-item-text">Повысить самооценку</span>
+   </li>
+   <li>
+<span class="checkbox">✔</span> 
+      <span class="list-item-text">Полюбить себя</span>
+   </li>
+   <li>
+<span class="checkbox">✔</span>
+      <span class="list-item-text">Наладить отношения с собой 
+   и окружающим миром</span>
+
+</li>
+</ul>
+</div>
+
+
 <div class="services">
  <span class="shape">Консультация</span>
 <span class="shape">Диагностика</span>
 <span class="shape">Сопровождение</span>
 </div>
 
+
+<div class="socials">
+<h4>Мои социальные сети:</h4>
+<a href="portfolio.html" target="_blank">WhatsApp</a>  
+ 
+<a href="https://instagram.com/aliya_official92" target="blank">Instagram</a>
 </div>
  </div>
-
 
 <div class="right-block">
    <div class="top-row">
    
   <div class="photo-block">
-        <img src="PSX_20251114_071933.jpg"></div>
+        <img src="img2/PSX_20251114_071933.jpg" alt="Портрет психолога - консультант по личностному развитию"> </div>
 </div>
+
         <div class="phrase">
-   <p>Всё, что мы высаживаем в нашем подсознании, <br>и питаем повторением и эмоциями, когда-нибудь станет реальностью.</p>
+   <p>Всё, что мы высаживаем в нашем подсознании, и питаем повторением и эмоциями, когда-нибудь станет реальностью.</p>
 </div>
-<div class="help-block">
-<h2>Чем я могу помочь</h2>
-<p><li>Преодолеть трудности</li>
-   <li>Справиться с депрессией</li>
-   <li>Повысить самооценку</li>
-   <li><strong>Полюбить себя</strong></li>
-   <li>Наладить отношения с собой </li>
-   и окружающим миром</p>
-</div>
-<br>
+
+<div class="about-block">
+<h3>Обо мне</h3>
+<p>Меня зовут Елена.
+   Я помогаю людям более 5 лет. 
+   Самое главное в моей профессии,
+   это помочь людям поверить в себя  
+   и ценить эту прекрасную жизнь,
+   несмотря на временные трудности.</p>
+   </div>
+
 <div class="contacts">
 <h4>Контакты</h4>
 <p>Телефон: +77756106416</p>
@@ -84,7 +111,20 @@
 
 
 
+    
+
+   
+
+
+
+
+
+
+
+
+
  </body>
         </html>
    
+
 
