--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
    <div class="top-row">
    
   <div class="photo-block">
-        <img src="img2/PSX_20251114_071933.jpg" alt="Портрет психолога - консультант по личностному развитию"> </div>
+        <img src="PSX_20251114_071933.jpg" alt="Портрет психолога - консультант по личностному развитию"> </div>
 </div>
 
         <div class="phrase">
@@ -126,5 +126,6 @@
  </body>
         </html>
    
+
 
 
