--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio2</title>
+    <meta name="description" content="Портфолио психолога. Примеры работ, контакты и запись на консультации."> 
+    <title>Портфолио психолога</title>
+    <title>Портфолио психолога</title>
     <link rel="stylesheet" href="styles2.css">
  </head>
 
@@ -126,6 +128,7 @@
  </body>
         </html>
    
+
 
 
 
