--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <div class="left-block">
 <h1 class="overlay-title">Психолог</h1> 
 <h3 class="name">Елена Викторовна</h3>
-
+<hr class="name-line">
 <div class="help-block">
 <h3>Чем я могу помочь</h3>
 </div>
@@ -128,6 +128,7 @@
  </body>
         </html>
    
+
 
 
 
