--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="description" content="Портфолио психолога. Примеры работ, контакты и запись на консультации."> 
     <title>Портфолио психолога</title>
     <title>Портфолио психолога</title>
+    <link
+    href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Parisienne&family=Oleo+Script&display=swap"
+    rel="stylesheet">
+    <link rel="stylesheet" href="styles2.css">
     <link rel="stylesheet" href="styles2.css">
  </head>
 
@@ -21,7 +25,6 @@
 
 <div class="container"> 
    
-
 <div class="left-block">
 <h1 class="overlay-title">Психолог</h1> 
 <h3 class="name">Елена Викторовна</h3>
@@ -31,8 +34,7 @@
 </div>
 
 <div class="list-wrapper">
-   
-    <ul>  <li>
+ <ul>  <li>
 <span class="checkbox">✔</span> 
 <span class="list-item-text">Преодолеть трудности</span>
 </li>
@@ -52,11 +54,9 @@
 <span class="checkbox">✔</span>
       <span class="list-item-text">Наладить отношения с собой 
    и окружающим миром</span>
-
 </li>
 </ul>
 </div>
-
 
 <div class="services">
  <span class="shape">Консультация</span>
@@ -64,12 +64,14 @@
 <span class="shape">Сопровождение</span>
 </div>
 
-
-<div class="socials">
-<h4>Мои социальные сети:</h4>
-<a href="portfolio.html" target="_blank">WhatsApp</a>  
- 
-<a href="https://instagram.com/aliya_official92" target="blank">Instagram</a>
+<div class="contacts">
+<h4>Контакты</h4>
+   <p>Телефон: +77756106416</p>
+   <p>Email: agizatullina699@gmail.com</p>
+</div>
+    
+<div class="button-container">
+<button onclick="alert('Спасибо, мы с вами свяжемся!')">Записаться на пробную консультацию</button>
 </div>
  </div>
 
@@ -94,40 +96,18 @@
    несмотря на временные трудности.</p>
    </div>
 
-<div class="contacts">
-<h4>Контакты</h4>
-<p>Телефон: +77756106416</p>
-<p>Email:</p>
+<div class="socials">
+   <h4><a href="portfolio.html" target="_blank">WhatsApp</a></h4>  
+   <h4><a href="https://instagram.com/aliya_official92" target="blank">Instagram</a></h4>
 </div>
-
 </div>
-    </div>
+</div>
  
    
-
-
-
-
-
-
-
-
-
-    
-
-   
-
-
-
-
-
-
-
-
-
- </body>
+</body>
         </html>
    
+
 
 
 
