--- a/index.html
+++ b/index.html
@@ -29,32 +29,16 @@
 <h1 class="overlay-title">Психолог</h1> 
 <h3 class="name">Елена Викторовна</h3>
 <hr class="name-line">
+    
 <div class="help-block">
 <h3>Чем я могу помочь</h3>
-</div>
-
-<div class="list-wrapper">
- <ul>  <li>
-<span class="checkbox">✔</span> 
-<span class="list-item-text">Преодолеть трудности</span>
-</li>
-   <li>
-    <span class="checkbox">✔</span>  
-      <span class="list-item-text">Справиться с депрессией</span>
-   </li>
-   <li>
-<span class="checkbox">✔</span>  
-      <span class="list-item-text">Повысить самооценку</span>
-   </li>
-   <li>
-<span class="checkbox">✔</span> 
-      <span class="list-item-text">Полюбить себя</span>
-   </li>
-   <li>
-<span class="checkbox">✔</span>
-      <span class="list-item-text">Наладить отношения с собой 
-   и окружающим миром</span>
-</li>
+<ul>
+<li>Преодолеть трудности</li>
+   <li>Справиться с депрессией</li>
+   <li>Повысить самооценку</li>
+   <li><strong>Полюбить себя</strong></li>
+   <li>Наладить отношения с собой 
+   и окружающим миром</li>
 </ul>
 </div>
 
@@ -66,8 +50,8 @@
 
 <div class="contacts">
 <h4>Контакты</h4>
-   <p>Телефон: +77756106416</p>
-   <p>Email: agizatullina699@gmail.com</p>
+    <span>Телефон: <a href="tel:+77756106416">+77756106416</a></span> 
+   <span>Email: <a href="mailto:agizatullina699@gmail.com">agizatullina699@gmail.com</a></span>
 </div>
 </div>
 
@@ -93,8 +77,10 @@
    </div>
 
 <div class="socials">
-   <h4><a href="portfolio.html" target="_blank">WhatsApp</a></h4>  
-   <h4><a href="https://instagram.com/aliya_official92" target="blank">Instagram</a></h4>
+  <a href="https://wa.me/77756106416"
+target="_blank" class="social-link whatsapp">WhatsApp</a> 
+   <a href="https://instagram.com/aliya_official92" 
+   target="_blank" class="social-link"instagram>Instagram</a>
 </div>
 </div>
 </div>
@@ -103,6 +89,7 @@
 </body>
         </html>
    
+
 
 
 
